--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -116,3 +116,52 @@ button:hover {
     box-shadow: 10px 0 white, 20px 0 white;
   }
 }
+
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+}
+
+.gallery-item {
+  width: 360px;
+  height: 200px;
+  border: 1px solid #808080;
+}
+
+.gallery-item-image {
+  width: 360px;
+  height: calc(100% - 48px);
+}
+
+.info {
+  display: flex;
+  justify-content: space-around;
+}
+
+.info-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+.info-value {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 200%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
